--- a/Source/style.css
+++ b/Source/style.css
@@ -45,16 +45,11 @@
 }
 
 .wrapper form span:nth-child(3){
+    padding-left: 10px;
     right: 18px ;
+    border-left: 1px solid rgba(0, 0, 0, 50%) ;
 }
 
-.wrapper form span:nth-child(3)::before{
-    content: "";
-    height: 100%;
-    width: 1px;
-    margin-right: 13px;
-    border-right: 1px solid;
-}
 
 .wrapper input{
     padding-left: 50px;
